# uwrt

libuv/: CMakeLists.txt  Makefile  libuv.vcxproj  libuv.vcxproj.filters
libuv/include/: uv.h
libuv/src/: libuv.def
libuv/src/unix/: thread.c
libuv/src/win/: thread.c  threadpool.c
lua/: CMakeLists.txt  lua.vcxproj  lua.vcxproj.filters
lua/src/: lua.def
uci/: CMakeLists.txt  uci.vcxproj  uci.vcxproj.filters
uci/src/: asprintf.c  asprintf.h  cli.c  delta.c  dllmain.cpp  file.c  flock.c  flock.h  glob.c  glob.h  libuci.c  list.c  list.h  parse.c  stdbool.h  uci.c  uci.def  uci.h  uci_config.h  uci_getopt.c  uci_getopt.h  uci_internal.h  ucimap.c  ucimap.h  util.c
uvhttpd/: uvhttpd.vcxproj  uvhttpd.vcxproj.filters
uvhttpd/files/etc/config/: uvhttpd
uvhttpd/src/: automem.c  automem.h  cfg.c  cfg.h  strptime.c  utils.c  utils.h  uvhttpd.c  webctx.c  webctx.h  webrequest.c  webrequest.h  webserver.c  webserver.h
win32/: uwrt.sln
wwwroot/: index.html
